# allison-richardson-tuition

./: .gitignore  Cargo.toml  Dockerfile  TODO.md  flag.html  fly.toml  index.css  scratch  tailwind.config.js
docker/: base.yml
src/: common.rs  form.rs  main.rs  middleware.rs  modal.rs  nav.rs  routes.rs  static_files.rs  svg.rs  tw.rs
static/: htmx.css  tw.css
