[package]
name = "ar-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
axum = { version = "0.6.20", features = ["tracing"] }
maud = { version = "0.25.0", features = ["axum"] }
once_cell = "1.18.0"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
